background image and button's alignment fixed

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,3 +1,6 @@
+html, body{
+height: 100%;
+}
 body{
 background-color: green;
 margin: 0px;
@@ -74,8 +77,9 @@ span.glyphicon-remove{
           top: 70px;
           left:0;
           z-index:1;
+          margin-top: 20px;
           padding:0;
-          height: 610px;
+          height: 90%;
           
    }
 
@@ -95,22 +99,30 @@ span.glyphicon-remove{
   }
       
 }
-#bg{
+#main{
+background-color: black;
+padding: 0;
+margin: 0;
+width: 100%;
+height: 100%;
+}
+
+#main #bg{
 position: relative;
-
+padding: 0;
+background-image: url("image.jpg");
+background-repeat: no-repeat;
+background-size: 100% 100%;
+ margin: 0 auto;
+height: 90%;
+width: 100%;
 }
 
-
-#bg img{
-width:100%; 
-height:590px;; 
-margin:0 auto;
-}
 
 #bg #dlbuttons{
 width: 500px;
 position: absolute;
-right: 30%;
+right: 31.5%;
 bottom: 150px;
 padding: 20px;
 }
